sidemenu styled and npm develop bug squished

--- a/src/components/Layout/Sidemenu/sidemenu.module.scss
+++ b/src/components/Layout/Sidemenu/sidemenu.module.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/scss/_variables.scss';
+
 // Credit to Erik Terwan for these burger styles!
 .menuToggle {
   display: block;
@@ -29,7 +31,7 @@
     height: 4px;
     margin-bottom: 5px;
     position: relative;
-    background: #cdcdcd;
+    background: $grey-darker;
     border-radius: 3px;
     z-index: 1;
     transform-origin: 4px 0px;
@@ -49,7 +51,7 @@
   input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
-    background: #232323;
+    background: $white;
 
     &:nth-last-child(2) {
       transform: rotate(-45deg) translate(0, -1px);
@@ -64,11 +66,14 @@
 
 .menu {
   position: absolute;
-  width: 300px;
-  margin: -75px 0 0 200px;
+  color: $white;
+  font-family: $font-secondary-family;
+  height: 100vh;
+  width: 200px;
+  margin: -75px 0 0 75px;
   padding: 50px;
   padding-top: 125px;
-  background: #ededed;
+  background: $grey-darker;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
@@ -76,7 +81,14 @@
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 
   li {
-    padding: 10px 0;
-    font-size: 22px;
+    padding: 2rem 0;
+    font-size: 2rem;
+    border-bottom: 1px solid $grey-lighter;
+    text-align: right;
+
+    &:last-child {
+      border: none;
+    }
   }
+
 }
